Sec24_Chap247-XXX: optimized test code